V3168: Fix D890, D920 Signal label

--- a/Prevu.Synoptics.V3168_Sirplaste/Details/D890.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Details/D890.xaml
@@ -11,12 +11,12 @@
              x:Class="Prevu.Synoptics.D890">
     <Canvas Height="427" Width="452">
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="10" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="890-61-LEV" SignalName="LSHA1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="101" Canvas.Top="39"/>
+        <Labels:SignalLabel ComponentName="890-61-LEV" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="101" Canvas.Top="39"/>
         <Labels:SignalLabel ComponentName="890-61-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Left="101" Canvas.Top="94" />
         <Labels:SignalLabel ComponentName="890-61-LEV" SignalName="LSL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="101" Canvas.Top="185"/>
-        <Labels:SignalLabel ComponentName="890-61-LEV" SignalName="LSHA" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="39"/>
-        <Labels:SignalLabel ComponentName="890-61-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="94" />
-        <Labels:SignalLabel ComponentName="890-61-LEV" SignalName="LSL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="185"/>
+        <Labels:SignalLabel ComponentName="890-62-LEV" SignalName="LSHA" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="39"/>
+        <Labels:SignalLabel ComponentName="890-62-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="94" />
+        <Labels:SignalLabel ComponentName="890-62-LEV" SignalName="LSL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="307" Canvas.Top="185"/>
         <Labels:DeviceLabel ComponentName="890-61-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="77" Canvas.Top="219"/>
         <Labels:DeviceLabel ComponentName="890-62-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="285" Canvas.Top="219"/>
     </Canvas>
