V3085: Small Fix on Triple FP Pages and details

--- a/Prevu.Synoptics.V3085_Anviplas/D464_FP350.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D464_FP350.xaml
@@ -22,9 +22,9 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Machines:V01_FP_Hopper_DETAIL Canvas.Left="21" Canvas.Top="50" Height="334" Width="509" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="464-61-LEV" SignalName="LSH" Canvas.Left="229" Canvas.Top="85" />
-    <Labels:SignalLabel ComponentName="464-61-LEV" SignalName="LSL1" Canvas.Left="75" Canvas.Top="236" HorizontalAlignment="Left" VerticalAlignment="Center" FlowDirection="LeftToRight"/>
-    <Labels:SignalLabel ComponentName="464-61-LEV" SignalName="LSL2" Canvas.Left="260" Canvas.Top="265" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="464-61-LEV" SignalName="LSHA" Canvas.Left="229" Canvas.Top="85" />
+    <Labels:SignalLabel ComponentName="464-61-LEV" SignalName="LSLA1" Canvas.Left="75" Canvas.Top="236" HorizontalAlignment="Left" VerticalAlignment="Center" FlowDirection="LeftToRight"/>
+    <Labels:SignalLabel ComponentName="464-61-LEV" SignalName="LSLA2" Canvas.Left="260" Canvas.Top="265" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel 
             ComponentName="464-61-LEV" Canvas.Left="222" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="238" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center">
