--- a/Prevu.Synoptics.V3085_Anviplas/P474_FP350.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474_FP350.xaml
@@ -94,7 +94,7 @@
             VerticalAlignment="Center" 
             JumpFromLabel="470-01-MA1" 
             JumpToLabel="444-01-MA1" Direction="Left" Canvas.Left="177" Canvas.Top="250"/>
-        <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D474" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="888" Canvas.Top="262" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D474_FP350" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="888" Canvas.Top="262" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="492-01-MA1" Canvas.Left="1150" Canvas.Top="748"/>
