--- a/Prevu.Synoptics.V3085_Anviplas/P464_FP350.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P464_FP350.xaml
@@ -105,7 +105,7 @@
             VerticalAlignment="Center" 
             JumpFromLabel="460-01-MA1" 
             JumpToLabel="444-01-MA1" Direction="Left" Canvas.Left="177" Canvas.Top="250"/>
-    <Labels:DetailsLabel ComponentName="464-VIEW" DetailsPageName="D464" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="888" Canvas.Top="262" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="464-VIEW" DetailsPageName="D464_FP350" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="888" Canvas.Top="262" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="482-01-MA1" Canvas.Left="1150" Canvas.Top="748"/>
