--- a/Prevu.Synoptics.V3168_Sirplaste/Pages/P997.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Pages/P997.xaml
@@ -12,7 +12,7 @@
              x:Class="Prevu.Synoptics.P997" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="301" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="334" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
+    <Labels:Pipe Width="193" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="338" Canvas.Top="370" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
     <Labels:Pipe Width="72" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="1259" Canvas.Top="72" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="759" Canvas.Top="490">
       <Labels:Pipe.RenderTransform>
@@ -34,7 +34,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="254" Canvas.Top="429" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="254" Canvas.Top="442" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -44,17 +44,6 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="48" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="285" Canvas.Top="174" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="147" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="261" Canvas.Top="105" Text="" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT2"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="90" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="997-25-CV1" VisibilitySignal="MAT1" Canvas.Left="225" Canvas.Top="613">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -135,9 +124,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="118" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="81" Canvas.Top="105" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="33" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="281" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1"/>
-    <Labels:Pipe Width="48" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="489" Canvas.Top="174" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1">
+    <Labels:Pipe Width="118" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="155" Canvas.Top="119" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="48" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="385" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -147,8 +135,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="33" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="485" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1"/>
-    <Labels:Pipe Width="258" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="502" Canvas.Top="230" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2">
+    <Labels:Pipe Width="33" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="381" Canvas.Top="168" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1"/>
+    <Labels:Pipe Width="258" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="398" Canvas.Top="244" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -158,7 +146,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="147" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="488" Canvas.Top="105" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
+    <Labels:Pipe Width="147" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="384" Canvas.Top="119" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
     <Machines:V01_EC_FiltroManiche Canvas.Left="1318" Canvas.Top="55" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_BBF_DoubleBag Canvas.Left="196" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Machines:V01_BBF_DoubleBag Canvas.Left="641" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -166,10 +154,9 @@
     <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="256" Canvas.Top="501" Height="93" Width="164" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="700" Canvas.Top="504" Height="94" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1142" Canvas.Top="504" Height="94" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_DV_Diverter Canvas.Left="165" Canvas.Top="94" HorizontalAlignment="Center" Height="81" VerticalAlignment="Center"/>
-    <Machines:V01_DV_Diverter Canvas.Left="372" Canvas.Top="94" Height="81" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Machines:V01_DV_Diverter Canvas.Left="268" Canvas.Top="108" Height="81" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:MaterialInletOutlet Canvas.Left="1215" Canvas.Top="41" HorizontalAlignment="Center" VerticalAlignment="Top" Height="67" Width="67"/>
-    <Rectangle Height="52" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="300" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Rectangle Height="52" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="400" Canvas.Top="190" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Rectangle.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -179,27 +166,7 @@
         </TransformGroup>
       </Rectangle.RenderTransform>
     </Rectangle>
-    <Rectangle Height="52" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="504" Canvas.Top="176" HorizontalAlignment="Left" VerticalAlignment="Center">
-      <Rectangle.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Rectangle.RenderTransform>
-    </Rectangle>
-    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="227" Canvas.Top="173" HorizontalAlignment="Center" VerticalAlignment="Top">
-      <Machines:External.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:External.RenderTransform>
-    </Machines:External>
-    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="431" Canvas.Top="173" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="327" Canvas.Top="187" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -211,8 +178,8 @@
     </Machines:External>
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            JumpFromLabel="892-21-CV1" 
-            JumpToLabel="888-01-MA1" Canvas.Left="29" Canvas.Top="75"/>
+            JumpFromLabel="894-21-CV1" 
+            JumpToLabel="888-01-MA1" Canvas.Left="103" Canvas.Top="89"/>
     <Labels:JumpLabel 
             JumpFromLabel="998-BAGS" 
             JumpToLabel="898-01-MA1" Canvas.Left="642" Canvas.Top="448" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -223,10 +190,7 @@
             ComponentName="998-25-CV1" Canvas.Left="738" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="892-71-ECS1" Canvas.Left="138" Canvas.Top="225"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="894-71-ECS1" Canvas.Left="345" Canvas.Top="225"/>
+            ComponentName="894-71-ECS1" Canvas.Left="363" Canvas.Top="239"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="997-25-CV1" Canvas.Left="293" Canvas.Top="571"/>
@@ -237,9 +201,7 @@
     <Labels:DetailsLabel ComponentName="999-BAGS" DetailsPageName="D999" Canvas.Left="1199" Canvas.Top="679" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1425" Canvas.Top="130" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-            ComponentName="892-21-CV1" Canvas.Left="183" Canvas.Top="28" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel 
-            ComponentName="894-21-CV1" Canvas.Left="390" Canvas.Top="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            ComponentName="894-21-CV1" Canvas.Left="286" Canvas.Top="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <TextBlock TextWrapping="Wrap" 
             Height="66" Width="122" TextAlignment="Center" 
             FontSize="20" Foreground="White" Text="{lex:Loc MACHINES EXHAUST}" Canvas.Left="1116" Canvas.Top="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
