V3168: Fix on P880, Adjust on Overallview

--- a/Prevu.Synoptics.V3168_Sirplaste/OverallView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/OverallView.xaml
@@ -277,8 +277,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="553" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="457-01-MA1" Canvas.Left="1230" Canvas.Top="2894" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="411" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="868-01-MA1" Canvas.Left="3268" Canvas.Top="3440" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="538" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="868-01-MA1" Canvas.Left="3407" Canvas.Top="3175" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="315" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="870-01-MA1" Canvas.Left="3364" Canvas.Top="3396" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT2"/>
+        <Labels:Pipe Width="494" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="870-01-MA1" Canvas.Left="3429" Canvas.Top="3153" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="MAT2" VisibilityComponent="892-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -288,7 +288,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="84" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="868-01-MA1" Canvas.Left="3671" Canvas.Top="2910" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="84" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="870-01-MA1" Canvas.Left="3671" Canvas.Top="2910" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="MAT2" VisibilityComponent="892-21-CV1"/>
         <Labels:Pipe Color="Water" Width="1003" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="373-01-MA1" Canvas.Left="4870" Canvas.Top="2563" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="680" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="373-01-MA1" Canvas.Left="4532" Canvas.Top="2225" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -385,8 +385,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="1157" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="3433" Canvas.Top="3780" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="3370" Canvas.Top="3843" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="1077" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="3513" Canvas.Top="3780" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="3448" Canvas.Top="3843" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -451,7 +451,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="666" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="4794" Canvas.Top="3506" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="528" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="4794" Canvas.Top="3506" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="88" RenderTransformOrigin="0.5,0.5" StatusComponent="904-01-MA1" Canvas.Left="4795" Canvas.Top="3405" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="97" RenderTransformOrigin="0.5,0.5" StatusComponent="904-01-MA1" Canvas.Left="4679" Canvas.Top="3405" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="83" RenderTransformOrigin="0.5,0.5" StatusComponent="904-01-MA1" Canvas.Left="4576" Canvas.Top="3405" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -488,8 +488,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="906" RenderTransformOrigin="0.5,0.5" StatusComponent="904-01-MA1" Canvas.Left="4879" Canvas.Top="3231" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="161" RenderTransformOrigin="0.5,0.5" StatusComponent="904-01-MA1" Canvas.Left="5702" Canvas.Top="3309" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="928" RenderTransformOrigin="0.5,0.5" StatusComponent="904-01-MA1" Canvas.Left="4879" Canvas.Top="3231" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="161" RenderTransformOrigin="0.5,0.5" StatusComponent="904-01-MA1" Canvas.Left="5724" Canvas.Top="3309" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -510,8 +510,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="349" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5413" Canvas.Top="4075" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5368" Canvas.Top="4030" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="334" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5428" Canvas.Top="4075" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5383" Canvas.Top="4030" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -521,7 +521,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5337" Canvas.Top="3891" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5352" Canvas.Top="3891" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -531,7 +531,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="285" RenderTransformOrigin="0.5,0.5" StatusComponent="924-01-MA1" Canvas.Left="5249" Canvas.Top="3656" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="303" RenderTransformOrigin="0.5,0.5" StatusComponent="924-01-MA1" Canvas.Left="5240" Canvas.Top="3647" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -541,7 +541,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="285" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5273" Canvas.Top="3656" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="304" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5278" Canvas.Top="3647" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -551,7 +551,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="924-01-MA1" Canvas.Left="5346" Canvas.Top="3455" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="67" RenderTransformOrigin="0.5,0.5" StatusComponent="924-01-MA1" Canvas.Left="5358" Canvas.Top="3443" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -561,7 +561,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5370" Canvas.Top="3455" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="68" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5396" Canvas.Top="3443" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -581,7 +581,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="155" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5338" Canvas.Top="3316" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5352" Canvas.Top="3316" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -601,7 +601,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="397" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5217" Canvas.Top="3025" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="396" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="5232" Canvas.Top="3025" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -612,8 +612,19 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="452" RenderTransformOrigin="0.5,0.5" StatusComponent="924-01-MA1" Canvas.Left="4942" Canvas.Top="2892" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="1332" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="4086" Canvas.Top="2829" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="1346" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="4086" Canvas.Top="2829" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="934-01-MA1" Canvas.Left="4010" Canvas.Top="2905" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="166" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="5318" Canvas.Top="3486" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="5308" Canvas.Top="3496" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -631,7 +642,7 @@
         <local:P350 Canvas.Left="5803" Canvas.Top="2287" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P430 Canvas.Left="200" Canvas.Top="2186" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P530 Canvas.Left="1233" Canvas.Top="2286" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P810 Canvas.Left="2227" Canvas.Top="2685" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P810 Canvas.Left="2232" Canvas.Top="2732" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P880 Canvas.Left="3671" Canvas.Top="2839" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P920 Canvas.Left="5028" Canvas.Top="3342" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P997 Canvas.Left="3380" Canvas.Top="3811" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
