--- a/Prevu.Synoptics.V3168_Sirplaste/Pages/P880.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Pages/P880.xaml
@@ -52,7 +52,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="118" StatusComponent="870-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="168" Canvas.Top="130">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="118" StatusComponent="870-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="168" Canvas.Top="130" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT2">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -62,7 +62,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="93" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="139" Canvas.Top="74"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="93" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="139" Canvas.Top="74" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT2"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="696" Canvas.Top="786">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
