--- a/Prevu.Synoptics.V2150_Planeta/Pages/P340.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P340.xaml
@@ -173,5 +173,7 @@
         <Labels:DeviceLabel ComponentName="338-01-MA1" Canvas.Left="1041" Canvas.Top="87" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="345-MIXER" Canvas.Left="1203" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="311-DISCHARGE" Canvas.Left="388" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    </Canvas>
+    <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="999" Canvas.Top="520" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="1013" Canvas.Top="546" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
